src/pages/home/home.scss
$animation-config: linear infinite;
$slideshow-image-count: 9;
$slideshow-image-width: 500px;
$section-padding-y: 100px;
$events-section-gap: 4rem;

.bg-gradient {
	background-image: radial-gradient(
		60% 55% at 50% 50%,
		var(--clr-bg) 20%,
		var(--clr-bg-3) 75%,
		#000
	);
}

.title-bg {
	@apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 -z-10;
	width: 40vw;
	overflow: hidden;
}

.hero-loader {
	z-index: 1;
	background-color: black;
	transform-origin: center top;
}

.hero-section {
	transform-style: preserve-3d;

	&::before {
		content: "";
		position: absolute;
		z-index: 0;
		inset: 0;
		background-color: rgba(0, 0, 0, 0.7);
	}

	.logo {
		width: 35vmax;
		z-index: 5;
	}

	.title {
		font-size: 10rem;
		opacity: 0.9;
		mix-blend-mode: difference;
		color: red;
		// letter-spacing: 10px;
		-webkit-text-stroke: 3px rgb(255, 119, 119);
	}

	.slideshow {
		position: absolute;
		z-index: -5;
		display: flex;
		width: calc($slideshow-image-width * $slideshow-image-count * 2);
		transform: translate3d(0, 0, 0);
		will-change: transform;

		.image-container {
			width: $slideshow-image-width;
			filter: grayscale(30%);
		}
	}

	.slideshow-top {
		animation: slideshow-top-anim 60s $animation-config;
	}

	.slideshow-bottom {
		top: 50%;
		animation: slideshow-bottom-anim 180s $animation-config;
	}

	@keyframes slideshow-top-anim {
		0% {
			transform: translateX(0);
		}
		100% {
			transform: translateX(
				calc($slideshow-image-count * $slideshow-image-width * -1)
			);
		}
	}

	@keyframes slideshow-bottom-anim {
		0% {
			transform: translateX(
				calc(
					($slideshow-image-count * $slideshow-image-width * -2) +
						($slideshow-image-width * 3)
				)
			);
		}
		100% {
			transform: translateX(0);
		}
	}
}

.about-section {
	padding-top: $section-padding-y;
	padding-bottom: $section-padding-y;
	position: relative;
	box-shadow: 0 -70px 70px #000;

	.panel {
		overflow: hidden;
		will-change: transform;
		backface-visibility: hidden;
	}

	.background-image {
		position: relative;

		&::before {
			content: "";
			position: absolute;
			inset: 0;
			background-color: #00000084;
		}
	}

	.container {
		position: relative;
		z-index: 1;
		font-size: 1.8rem;
		font-weight: 500;
	}

	.about-wolfame {
		background-image: url(../../assets/slideshow3.jpg);
	}

	.about-hall {
		background-image: url(../../assets/slideshow5.jpg);
	}
}

.events-section {
	.event-list {
		display: flex;
		flex-direction: column;
		gap: $events-section-gap;
		padding: $events-section-gap 0;

		li {
			font-size: 2rem;
			cursor: pointer;
		}
	}

	.events-swiper-container {
		transition: background-color 0.5s ease;
		height: 120vh;
	}

	.events-swiper {
		user-select: none;
	}

	.event-slide {
		width: 80vw;
		height: 85vh;
		background-color: #343434;
		border-radius: 20px;
		overflow: hidden;

		.slide-title {
			position: absolute;
			top: 50%;
			left: 50%;
			z-index: 2;
			transform: translate(-50%, -50%);
			font-size: 2.5rem;
		}
	}
}

.gallery-section {
	margin: 100px 0;
	height: 150vh;
	overflow: hidden;

	.gallery-image {
		border-radius: 10px;
		overflow: hidden;
	}
}

